# BajajFinsev-HackRx6-LLM

./: .dockerignore  .env copy  .env.example  .env.production  .env_test  .gitignore  ACCURACY_IMPROVEMENTS_SUMMARY.md  DIRECT_GEMINI_README.md  DOCKER_USAGE.md  Dockerfile  Dockerfile.minimal  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  Makefile  PRODUCTION_DEPLOYMENT.md  Plan.md  README.md  SETUP.md  TESTING_GUIDE.md  clear_lancedb.py  comprehensive_accuracy_test.py  debug_chunks.py  debug_processing.py  debug_warnings.py  deploy.sh  docker-compose.yml  environment.yml  gpu_architecture_update.md  init-letsencrypt.sh  main.py  payload.json  production-requirements.txt  pyproject.toml  question.json  quick_test.py  requirements.in  requirements.minimal.in  requirements.minimal.txt  requirements.txt  requirements_simple.txt  (+11 more)
.crush/: crush.db  crush.db-shm  crush.db-wal
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 8ee9f6a89414_create_initial_tables_for_documents_and_.py
config/nginx/: nginx.conf  options-ssl-nginx.conf
mcp_servers/: challenge_solver.py
nginx/: nginx.conf
nginx/sites-available/: llmnew.dev.conf  llmnow.dev.conf
payloads/: Payload13.json  Payload14.json  payload1.json  payload10.json  payload11.json  payload12.json  payload15.json  payload16.json  payload17.json  payload18.json  payload19.json  payload2.json  payload20.json  payload21.json  payload22.json  payload3.json  payload4.json  payload5.json  payload6.json  payload7.json  payload8.json  payload9.json
scripts/: deploy.sh  setup-ssl.sh  test-api.sh
src/: __init__.py  main.py  main_direct_gemini.py  main_hybrid.py  main_simple.py  optimized_main.py  solution.py  speed_main.py  ultra_main.py  worker.py
src/core/: advanced_document_processor.py  advanced_gpu_manager.py  advanced_retrieval_engine.py  advanced_vector_optimizer.py  algorithm_executor.py  basic_rag_pipeline.py  config.py  context_ranking_engine.py  direct_gemini_processor.py  document_cache_manager.py  document_indexing_pipeline.py  document_processor.py  document_specific_matcher.py  domain_aware_generator.py  enhanced_document_processor.py  enhanced_question_matcher.py  gpu_cache_manager.py  gpu_service.py  hierarchical_chunker.py  high_performance_rag_engine.py  hybrid_document_matcher.py  hybrid_response_handler.py  hybrid_retrieval_engine.py  integrated_rag_pipeline.py  llm_config.py  multi_format_processor.py  parallel_chunking_service.py  parallel_document_processor.py  parallel_vector_store.py  performance_monitor.py  (+14 more)
tasks/: plan.md  task1.md  task2.md  task3.md
test_files/: This is a sample text file.docx
test_structure/: clear_lancedb.py  docs_downloader.py  download_nltk_data.py  pdf_to_image.py  testing_llm_ocr.py  texttract.py  toggle_accuracy.py
tests/: evaluate_rag.py  test_endpoints.py  test_schemas.py  test_security.py
(+57 files in other folders)
